refs #1170 - droid checkin with paths to data store directory to be completed tomorrow. would have been nice if they mentioned the assets folder is read only. by storing our data at /data/data/org.linuxmce.qorbiter/files/ we can read and write to it. also of note, we cannot install to this directory and must copy from the qrc on first run.

--- a/src/qOrbiter/qOrbiter_src/skinData.qrc
+++ b/src/qOrbiter/qOrbiter_src/skinData.qrc
@@ -6,8 +6,7 @@
     </qresource>
     <qresource prefix="/icons"/>
     <qresource prefix="/main">
-        <file alias="main.qml">qml/android/phone/default/main.qml</file>
-        <file alias="Style.qml">qml/android/phone/default/Style.qml</file>
+        <file>config.xml</file>
     </qresource>
     <qresource prefix="/desktop">
         <file alias="Splash.qml">qml/Splash.qml</file>
@@ -20,7 +19,7 @@
         <file alias="Splash.qml">qml/harmattan/default/Splash.qml</file>
     </qresource>
     <qresource prefix="/android">
-        <file alias="SetupNewOrbiter.qml">skins/andriod/SetupNewOrbiter.qml</file>
-        <file alias="Splash.qml">skins/andriod/Splash.qml</file>
+        <file alias="SetupNewOrbiter.qml">qml/android/phone/SetupNewOrbiter.qml</file>
+        <file alias="Splash.qml">qml/android/phone/Splash.qml</file>
     </qresource>
 </RCC>
