refs #1170 - should bring some images back to android, checkin for testing on android builder

--- a/src/qOrbiter/qOrbiter_src/skinData.qrc
+++ b/src/qOrbiter/qOrbiter_src/skinData.qrc
@@ -20,4 +20,7 @@
     <qresource prefix="/android">
         <file alias="Splash.qml">qml/android/Splash.qml</file>
     </qresource>
+    <qresource prefix="/icons">
+        <file alias="icon.png">img/harmattan_splash.png</file>
+    </qresource>
 </RCC>
