--- a/src/qOrbiter/qOrbiter_src/skinData.qrc
+++ b/src/qOrbiter/qOrbiter_src/skinData.qrc
@@ -28,4 +28,7 @@
         <file alias="mediacell.png">qml/desktop/default/img/ui3/linuxmcewidebutton.png</file>
         <file alias="playlist.png">qml/desktop/default/img/icons/package_editors.png</file>
     </qresource>
+    <qresource prefix="/components">
+        <file alias="FpSprite.qml">qml/desktop/default/components/FpSprite.qml</file>
+    </qresource>
 </RCC>
