Refs #1444 - New dhcpd.conf template where hardcoded linuxmce.local domain name is replaced by placeholder

--- a/src/BootScripts/templates/dhcpd.conf.tmpl
+++ b/src/BootScripts/templates/dhcpd.conf.tmpl
@@ -20,7 +20,7 @@ zone linuxmce.local. {
 	key "rndc-key";
 }
 
-option domain-name "linuxmce.local";
+option domain-name "%INTERNAL_DOMAIN_NAME%";
 
 
 option routers %CORE_INTERNAL_ADDRESS%;
